    package enums;

    // Trin i en runde, som vises på tidslinjen (ordlisten). Matcher CHECK på event.event_type.
    public enum EventType {
        STIMULATION_START,
        EGG_RETRIEVAL,
        FERTILISATION,
        EMBRYO_TRANSFER,
        PREGNANCY_TEST
    }