    package enums;

    // Hormontyper (ordlisten). Matcher CHECK på hormone_log.hormone_type.
    public enum HormoneType {
        FSH,
        LH,
        E2_OESTRADIOL,
        PROGESTERONE,
        AMH
    }