    package enums;

    // Resultat af en afsluttet runde. Ingen PENDING — en runde uden resultat har result = null.
    public enum Result {
        POSITIVE,
        NEGATIVE
    }