    package enums;

    // Status på en runde. IN_PROGRESS ved start (UC8), COMPLETED ved afslutning (UC14).
    public enum RoundStatus {
        IN_PROGRESS,
        COMPLETED
    }